--- a/html5up-paradigm-shift/index.html
+++ b/html5up-paradigm-shift/index.html
@@ -429,15 +429,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">random@aleatorio.ext</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(312) 555-5555</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>789 RandomVille, Absurdistan, TN 12345</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
