--- a/html5up-paradigm-shift/index.html
+++ b/html5up-paradigm-shift/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>UNA PLANTILLA DE SITIO RESPONSIVA GRATUITA DISEÑADA POR <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 ARRIBA</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
